Make `DataWeaveExpressionLanguageAdaptor` initialisable.